privacy policy chess timer android

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-full">
         <div class="row maintitle">
             <div class="col-６ offset-3">
-                <h2>宝くじ当選番号予想 - プライバシーポリシー</h2>
+                <h2>Privacy Policy for Chess Timer Slothius</h2>
             </div>
 
         </div>
@@ -33,23 +33,37 @@
         <div class="row">
 
             <div class="col-6 offset-3">
-                <strong>1. 広告IDの利用</strong>
+                <strong><h1>Privacy Policy</h1></strong>
 
-                <p>広告を表示する際に、固有のIDが利用されています。</p>
-                <p>アプリから送信されるデータという点で、利用することをここに明記しています。</p>
-                <p>この情報から個人が特定されることはありません。<p>
-               
+                <p>Last updated: December 04, 2022</p>
+                <p>This Privacy Policy describes Our policies and procedures on the collection, 
+                    use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
             </div>
         </div>
         
         <div class="row">
                 <div class="col-6 offset-3">
-                    <strong>2. ネットワークアクセス</strong>
-                    <p>アプリ内への広告表示に利用されています。</p>
-                    <p>アプリ内の情報を更新するため利用されています。</p>
+                    <strong><h1>Collecting and Using Your Personal Data</h1></strong>
+                    <p>Chess Timer Slothius does not collect any kind of personal information.</p>
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-6 offset-3">
+                <strong><h1>Network Access</h1></strong>
+                <p>Chess Timer Slothius connects to internet in order to load the ads in the app.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 offset-3">
+                <strong><h1>Contact Us</h1></strong>
+                <p>If you have any questions about this Privacy Policy, You can contact us:</p>
+                <p>By email: janakamura@gmail.com</p>
+            </div>
+        </div>
+    </div>
 
 
     </div>
